# hypergrid-v2

./: .gitignore  Cargo.toml  LICENSE  README.md
cache/: Cargo.toml
cache/src/: cache.rs
cli/: Cargo.toml  README.md  main.rs
cli/src/: main.rs
cli/src/commands/: mod.rs  node.rs  start.rs  tester.rs
core/: Cargo.toml
core/src/: core.rs  lib.rs  transaction.rs
grid/: Cargo.toml  core.rs  error.rs  lib.rs  main.rs  mock.rs  solana.rs
grid/src/: cli.rs  core.rs  main.rs  solana.rs
hssn/: Cargo.toml  error.rs  lib.rs
logger/: Cargo.toml  README.md
logger/src/: lib.rs
mock-storage/: Cargo.toml
mock-storage/src/: lib.rs
node/: Cargo.toml  README.md
node/builder/: Cargo.toml  README.md
node/core/: Cargo.toml  README.md
node/core/src/: lib.rs  network.rs  node.rs
node/examples/full-node/: main.rs
node/examples/peering/: behavior.rs  config.rs  main.rs
node/examples/sfn/: README.md  core.rs  main.rs
node/examples/sfn/traits/: mod.rs
node/examples/zksfn/: main.rs
node/router/: Cargo.toml  README.md
node/router/src/: lib.rs
node/runtime/: Cargo.toml  README.md
node/runtime/src/: lib.rs
node/solana/: Cargo.toml  README.md
node/solana/rpc/: Cargo.toml  README.md
node/solana/rpc/src/: lib.rs  rpc_pubsub.rs
node/solana/src/: main.rs
node/solana/svm/: Cargo.toml  README.md
node/solana/svm/src/: lib.rs  loader.rs  runtime.rs
node/spawner/: Cargo.toml
node/spawner/src/: lib.rs
node/src/: builder.rs  cli.rs  config.rs  error.rs  gateway.rs  lib.rs  main.rs  node.rs
node/src/builder/: grid.rs
node/src/grid/: mod.rs  router.rs  runtime.rs  storage.rs
node/storage/: Cargo.toml  README.md
node/storage/src/: lib.rs  mock.rs
p2p/: Cargo.toml
p2p/src/: lib.rs  peering.rs
relay/: Cargo.toml
rpc/: Cargo.toml  README.md
rpc/src/: diet.rs  lib.rs  rpc.rs
rpc/src/adapters/svm/: http.rs  mod.rs  ws.rs
rpc/src/ports/: mod.rs  rpc_http.rs  rpc_ws.rs
rpc/src/solana/: mod.rs  rpc_http.rs
rpc/src/svm/: bridge.rs  mod.rs
rpc/src/tpu/: mod.rs
scripts/: run-grid.sh  sendTransaction.sh
solana/: Cargo.toml
solana-rpc/: Cargo.toml
solana-rpc/src/: rpc_http.rs
solana-svm/: Cargo.toml
solana-svm/src/: loader.rs  processor.rs  runtime.rs
solana/src/: main.rs
storage/: Cargo.toml
storage/src/: storage.rs
svm/: Cargo.toml
svm/src/: config.rs  lib.rs  loader.rs  processor.rs  runtime.rs
