[workspace]

members = [
	"cache",
	"cli",
	"logger",
	"node",
	"node/core",
	"node/router",
	"node/runtime",
	"node/solana",
	"node/solana/rpc",
	"node/solana/svm",
	"node/spawner",
	"node/storage",
	"p2p",
]

exclude = [
	"node/examples/sfn"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Sonic Engineering <engineering@sonic.game>"]
repository = "https://github.com/mirrorworld-universe/grid-v2"
homepage = "https://www.sonic.game/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anstyle = "1.0.10"
anyhow = "1.0.93"
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive"] }
jsonrpsee = { version = "0.24.7", features = ["full"] }
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }

solana-account-decoder = "2.1.4"
solana-bpf-loader-program = "2.1.4"
solana-client = "2.1.4"
solana-compute-budget = "2.1.4"
solana-program-runtime = "2.1.4"
solana-rpc-client-api = "2.1.4"
solana-sdk = "2.1.4"
solana-svm = "2.1.4"
solana-system-program = "2.1.4"
solana-transaction-status = "2.1.4"

grid-cli = { version = "=0.1.0", path = "cli" }
grid-cache = { version = "=0.1.0", path = "cache" }
grid-logger = { version = "=0.1.0", path = "logger" }
grid-node = { version = "=0.1.0", path = "node" }
grid-node-core = { version = "=0.1.0", path = "node/core" }
grid-node-router = { version = "=0.1.0", path = "node/router" }
grid-node-runtime = { version = "=0.1.0", path = "node/runtime" }
grid-node-solana = { version = "=0.1.0", path = "node/solana" }
grid-node-solana-rpc = { version = "=0.1.0", path = "node/solana/rpc" }
grid-node-solana-svm = { version = "=0.1.0", path = "node/solana/svm" }
grid-node-storage = { version = "=0.1.0", path = "node/storage" }
grid-node-spawner = { version = "=0.1.0", path = "node/spawner" }
grid-p2p = { version = "=0.1.0", path = "p2p" }
