[workspace]

members = [
	"grid"
]

exclude = [
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Sonic Engineering <engineering@sonic.game>"]
repository = "https://github.com/mirrorworld-universe/grid-v2"
homepage = "https://www.sonic.game/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anstyle = "1.0.10"
anyhow = "1.0.93"
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive", "cargo"] }
futures = "0.3.31"
jsonrpsee = { version = "0.24.7", features = ["full"] }
libp2p = { version = "0.54.1", features = ["ping", "tcp", "tls", "tokio", "yamux"] }
serde = "1.0.218"
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }

solana-account-decoder = "2.1.4"
solana-bpf-loader-program = "2.1.4"
solana-client = "2.1.4"
solana-compute-budget = "2.1.4"
solana-program-runtime = "2.1.4"
solana-rpc-client-api = "2.1.4"
solana-sdk = "2.1.4"
solana-svm = "2.1.4"
solana-system-program = "2.1.4"
solana-transaction-status = "2.1.4"

grid = { version = "=0.1.0", path = "grid" }
