[package]
name = "hypergrid-core"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
name = "hypergrid_core"
path = "lib.rs"

[dependencies]
