[package]
name = "hypergrid-grid"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
name = "hypergrid_grid"
path = "lib.rs"

[dependencies]
# anyhow = { workspace = true }
# async-trait = { workspace = true }
jsonrpsee = { workspace = true }
solana-account = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# solana-account-decoder = { workspace = true }
# solana-sdk = { workspace = true }
# solana-svm = { workspace = true }
# solana-transaction-status = { workspace = true }
# sqlx = { workspace = true }
