[package]
name = "grid-node"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "grid"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
grid-core = { workspace = true }
grid-solana-rpc = { workspace = true }
grid-solana-svm = { workspace = true }
grid-storage = { workspace = true }
jsonrpsee = { workspace = true }
solana-account-decoder = { workspace = true}
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = { workspace = true }

[features]
