[package]
name = "grid-node"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
grid-core = { workspace = true }
grid-mock-storage = { workspace = true }
grid-node-solana-rpc = { workspace = true }
grid-node-solana-svm = { workspace = true }
jsonrpsee = { workspace = true }
solana-account-decoder = { workspace = true}
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = { workspace = true }

[features]
