[package]
name = "grid-node"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
grid-node-core = { workspace = true }
grid-node-router = { workspace = true }
grid-node-runtime = { workspace = true }
grid-node-solana-rpc = { workspace = true }
grid-node-solana-svm = { workspace = true }
grid-node-storage = { workspace = true }
tokio = { workspace = true }

[features]
