[package]
name = "grid-rpc"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
jsonrpsee = { workspace = true }
solana-account-decoder = { workspace = true}
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

[features]
