[package]
name = "grid-svm"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-bpf-loader-program = { workspace = true }
solana-client = { workspace = true }
solana-compute-budget = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-system-program = { workspace = true }
