[package]
name = "grid-node-router"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
grid-node-core = { workspace = true }
grid-node-solana-rpc = { workspace = true }
