[package]
name = "grid-node-solana"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "grid"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
grid-cli = { workspace = true }
