[package]
name = "grid-node-spawner"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
grid-node-core = { workspace = true }
tokio = { workspace = true }
