[package]
name = "grid-node-solana-rpc"
description = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
grid-core = { workspace = true }
jsonrpsee = { workspace = true }
solana-account-decoder = { workspace = true}
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

[features]
